# ESP32-dronebridge

./: README.md  create_release_zip.ps1  create_release_zip.sh  sdkconfig_s3_usb_host
.github/workflows/: esp_idf.yml
main/: CMakeLists.txt  Kconfig.projbuild  db_serial.c  db_usb_cdc_host.c  db_usb_cdc_host.h
